<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecorderActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <item
        android:id="@+id/more_action"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="3"
        android:title="@string/more_action"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_more"
                android:title="@string/more_record"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_import_his_recorder"
                android:title="@string/menu_import_his_recorder"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_help"
                android:title="@string/menu_help"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_update"
                android:title="@string/menu_update"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>